# ner-llm

./: .gitignore  README.md  pyproject.toml
datasets/: dataset-formatting.ipynb  gen_descriptions.ipynb  process_nuner.py  process_pilener.py
train/: unsloth_train.ipynb
